// Distributed under the MIT software license, see the accompanying
// file LICENSE or http://www.opensource.org/licenses/mit-license.php.

syntax = "proto3";

package qrl;

import "qrl.proto";

message TransactionMetadata {
    Transaction transaction = 1;
    uint64 block_number = 2;
    uint64 timestamp = 3;
}

message LastTransactions {
    repeated TransactionMetadata tx_metadata = 1;
}